fix mobile version, fix some layout bugs

--- a/local/templates/dw/src/css/style.scss
+++ b/local/templates/dw/src/css/style.scss
@@ -820,8 +820,13 @@ footer {
   .rating {
     position: absolute;
     margin-top: 6px;
-    display: flex;
+    display: inline-flex;
     flex-direction: column;
+    @media(max-width:750px) {
+      position: relative;
+      margin-top: 0;
+      margin-bottom: 30px;
+    }
     .setRating {
       display: inline-flex;
       align-items: flex-start;
@@ -899,7 +904,7 @@ footer {
     max-width: 560px;
     margin-left: auto;
     margin-bottom: 60px;
-    @media(max-width:700px) {
+    @media(max-width:750px) {
       margin-left: 0;
       max-width: 100%;
       margin-bottom: 80px;
@@ -1069,9 +1074,6 @@ footer {
     .price {
       padding-left: 16px;
       border-left: 1px solid var(--color-main);
-      @media(max-width:550px) {
-        text-align: right;
-      }
     }
     .profile-range {
       margin-top: 18px;
@@ -1159,6 +1161,18 @@ footer {
     @media(max-width:500px) {
       grid-template-columns: 1fr 1fr;
       grid-template-rows: auto auto auto auto;
+      border-top: 1px solid #000;
+      padding-top: 40px;
+      &:first-child {
+        border-top: none;
+      }
+      .price::before {
+        display: none;
+      }
+      .term, .price {
+        border-top: none;
+        border-bottom: none;
+      }
       .num {
         grid-row: 1;
         grid-column: span 2;
@@ -1382,6 +1396,15 @@ footer {
   padding-bottom: 80px;
   .title-wrapper {
     position: relative;
+    @media(max-width:550px) {
+      display: flex;
+      flex-direction: column;
+      gap: 12px;
+      margin-bottom: 20px;
+      h1 {
+        margin-bottom: 0;
+      }
+    }
     .links {
       position: absolute;
       right: 0;
@@ -1391,6 +1414,12 @@ footer {
       flex-direction: column;
       justify-content: center;
       gap: 8px;
+      @media(max-width:550px) {
+        position: relative;
+        right: unset;
+        top: unset;
+        flex-direction: row;
+      }
       a {
         color: var(--color-dark);
       }
@@ -1429,6 +1458,9 @@ footer {
           display: flex;
           align-items: center;
           gap: 8px;
+          input {
+            width: auto;
+          }
           label {
             white-space: nowrap;
           }
